--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,6 @@ cython_debug/
 **/data/
 **/results/
 data_collectors/accessions.tsv
+
+# ignore the genome_builder directory and all its contents
+genome_builder/
